🐛 Fix: 모달 overflow hidden

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,3 +12,11 @@
   -ms-user-select: none;
   -webkit-touch-callout: none;
 }
+
+body {
+  background: #f6f6f6;
+}
+
+.ReactModal__Body--open {
+  overflow: hidden;
+}
